# Greenhaven

./: .gitignore  .prettierignore  AGENTS.md  README.md  build-release-full.bat  build-release-no-world.bat  build-release-with-world.bat  build-release-with-worlds.bat  build-release-worlds.example.json  build-release.bat  package-lock.json  package.json
.github/workflows/: ci.yml
GreenhavenWorld/: WORLD_MANIFEST.md  Welcome.md
docs/: 00-overview.md  01-architecture.md  02-runtime-stack.md  README.md  greenhaven-gameplay-logging.md  index.md  sidebar.json
docs/agents/: 00-overview.md  adventure-materializer.md  ai-npc-memory-palace-presentation.md  base-adapter.md  cartridge-steward.md  catalogue-scout.md  combat-director.md  companion-system.md  dialogue-anchor.md  intimacy-coordinator.md  movement-warden.md  per-npc-voice-engine.md  protagonist-action-renderer.md  quest-pacer.md  quest-watcher.md  reward-calibrator.md  scene-painter.md  voice-warden.md
docs/backend/: state-mutation-contract.md  transactions.md  turn-lifecycle.md
docs/cartridge/: agent-dataset-pipeline.md  authoring-guide.md  cartridge-forge-entity-authoring-system.md  cartridge-forge.md  depart-conditions.md  media-and-boot-assets.md  persona-and-voice.md  quest-recipes.md  sex-moves.md
docs/cartridge-forge/: context-menu-spec.md  gm-workspace-spec.md  inspector-editor-spec.md
docs/db/: density-history.md  engine-baseline-migration-inventory.md  engine-baseline.md  entity-profile-normalization.md  inventory.md  (+4 more)
tools/chroma-strip/: Cargo.toml  README.md
tools/chroma-strip/src/: main.rs
(+259 files in other folders)
